[project]
name = "pyfltr"
dynamic = ["version"]
description = "Python Formatters, Linters, and Testers Runner."
authors = [{ name = "aki.", email = "aki@tqzh.tk" }]
license = {text = "MIT"}
readme = "README.md"
classifiers = [
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Quality Assurance",
]
requires-python = ">=3.11,<4.0"
dependencies = [
    "bandit>=1.7",
    "dill>=0.3",
    "mcp>=1.0",
    "mypy>=1.0",
    "natsort>=8.0",
    "platformdirs>=4.0",
    "pre-commit>=4.0",
    "psutil>=6.0",
    "pylint-pydantic>=0.4",
    # `--output-format=json2`レポーターの対応起点が3.2.0のため下限を3.2に固定する。
    "pylint>=3.2",
    "pyright[nodejs]>=1.1",
    "pytest-asyncio>=1.0",
    "pytest-timeout>=2",
    "pytest-xdist>=3",
    "pytest>=7.0",
    "python-ulid>=3.0",
    "pyyaml>=6.0",
    "ruff>=0.12",
    # Python 3.14対応wheelが揃う最古バージョンが1.140.0のため下限を1.140に固定する。
    "semgrep>=1.140.0",
    "sqlfluff>=4.0",
    "textual>=7.0.0",
    "tomlkit>=0.13",
    "ty>=0.0.26",
    "typos>=1.0",
    "uv-sort>=0.5",
    "yamllint>=1.0",
]

[project.urls]
Homepage = "https://github.com/ak110/pyfltr"

[project.optional-dependencies]
# pyfltr v3 系で Python 系ツールを extras としていた経緯から、
# `pyfltr[python]` 指定が利用者環境に残っていてもエラーにならないよう
# 空配列エイリアスとして保持する。本体依存に Python 系ツール一式は同梱済み。
python = []

[project.scripts]
pyfltr = "pyfltr.cli.main:main"

[dependency-groups]
# mkdocs / mkdocs-material / mkdocs-llmstxt / pytest-mock / types-pyyaml は
# docs 生成・テストで直接使うため dev に残す。
# mdformat は mkdocs-llmstxt の間接依存。mdformat 1.0 系では mdformat-tables が未対応のため、
# mkdocs-llmstxt 0.5 系を維持できるよう <1.0 へ制約する。mdformat-tables 側の追従後に解除する。
dev = [
    "mdformat<1.0",
    "mkdocs-llmstxt>=0.5",
    "mkdocs-material>=9.6",
    "mkdocs>=1.6",
    "pytest-mock",
    "types-pyyaml>=6.0.12.20260408",
]

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.uv]
exclude-newer = "1 day"

[tool.bandit]
# pyfltrは各種ツールを起動するCLI（subprocess経由のwrapper）であり、
# subprocess関連の警告（B404・B603・B607）はpyfltrの本質的な動作に伴う。
# 引数組み立てとパス解決は内部経路で完結し外部入力を直接シェル展開しないため、
# `bandit-args = ["-q", "-r", "-f", "json"]`既定下では検出されるが運用上のリスクは限定的。
# B101（assert）は型ガード・内部不変条件チェックで利用しており品質上必要。
# 利用者プロジェクトでは既定のまま全ルール有効でbanditが動作する。
skips = ["B101", "B404", "B603", "B607"]
# テストコードはbandit対象外。テストデータでの一時パスハードコード（B108）や
# 検証用yaml.load（B506）は本番コードのリスクと性質が異なるため別管理とする。
exclude_dirs = ["tests"]

[tool.pyfltr]
preset = "latest"
# preset = "latest" + Python 系本体依存により、`uvx pyfltr` 単発で
# Python 系推奨構成 (ruff-format / ruff-check / mypy / pylint / pyright / pytest / uv-sort)
# が gate 通過で有効化される。`ty` のみ preset 非収録のため個別 true で追加する。
python = true
ty = true
# 以下の非Python系ツールは preset = "latest" に含まれないため個別 true で有効化する。
# pyfltr本体のドッグフーディングとして、各ツールの起動経路・引数組み立て・出力解釈を
# 本リポでも継続的に検証し、新規対応ツール追加時の回帰を検知する。
glab-ci-lint = true
yamllint = true
taplo = true
gitleaks = true
ec = true
shellcheck = true
shfmt = true
hadolint = true
bandit = true
colloquial-check = true
pylint-args = ["--jobs=4"]
# tests/smoke_data/ 配下にはツール毎の最小サンプル（GitHub Actionsワークフロー・
# Dockerfile・shellスクリプト等）を含むため、本リポのpyfltr対象から外す。
# 当該ディレクトリの起動確認は tests/smoke_test.py が pyfltr CLIをsubprocess経由で呼んで実施する。
# `extend-exclude`はファイル走査経路の除外、`subproject-exclude`はサブプロジェクト検出経路
# （`pyproject.toml`存在の機械的検出）の除外で別仕組み。配下に複数の`pyproject.toml`を含むため、
# モノレポ検出時に意図しないサブプロジェクトとして列挙されないよう両方に登録する。
extend-exclude = ["tests/smoke_data"]
# 辞書ファイル自身（口語表現サンプルを大量に含む）はcolloquial-checkの誤検出対象となるため除外する。
# テストフィクスチャ（口語表現を意図的に含むテスト入力）は現状tests/error_parser_test.pyのみが
# 検出対象だが、将来的な追加テストで検出が発生した場合の回帰防止を目的に、
# 口語表現サンプルを扱う3ファイルまとめて予防的に除外する。
colloquial-check-exclude = [
    "pyfltr/colloquial/words.txt",
    "pyfltr/colloquial/words_allow.txt",
    "tests/error_parser_test.py",
    "tests/colloquial_check_test.py",
    "tests/colloquial_cli_test.py",
]
subproject-exclude = ["smoke_data"]

[tool.pylint."messages control"]
disable = [
    "broad-exception-caught",
    "duplicate-code",
    "fixme",
    "invalid-name",
    "line-too-long",
    "logging-fstring-interpolation",
    "logging-not-lazy",
    "missing-class-docstring",
    "missing-function-docstring",
    "missing-module-docstring",
    "no-else-return",
    "too-few-public-methods",
    "too-many-arguments",
    "too-many-boolean-expressions",
    "too-many-branches",
    "too-many-instance-attributes",
    "too-many-locals",
    "too-many-nested-blocks",
    "too-many-positional-arguments",
    "too-many-public-methods",
    "too-many-return-statements",
    "too-many-statements",
]

[tool.ruff]
# https://docs.astral.sh/ruff/configuration/
line-length = 128

[tool.ruff.lint]
# https://docs.astral.sh/ruff/linter/#rule-selection
select = [
    # pydocstyle
    "D",
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # flake8-import-conventions
    "ICN",
    # isort
    "I",
]
ignore = [
    "D107", # Missing docstring in `__init__`
    "D415", # First line should end with a period
    "D403", # First word of the first line should be properly capitalized（日本語docstringにそぐわないため）
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"**_test.py" = ["D"]
"**/__init__.py" = ["D104"]  # Missing docstring in public package

[tool.mypy]
# https://mypy.readthedocs.io/en/stable/config_file.html
allow_redefinition = true
check_untyped_defs = true
ignore_missing_imports = true
strict_optional = true
strict_equality = true
warn_no_return = true
warn_redundant_casts = true
warn_unused_configs = true
show_error_codes = true

[tool.ty.rules]
# Windows 限定の attr-defined 誤検知を抑止する `# ty: ignore` コメントが、
# Linux 上では「未使用」扱いとなり警告になってしまうため、プラットフォーム跨ぎの
# POSIX 分岐を扱うファイルで恒常的に衝突する。ty: ignore を一元無効化する。
unused-ignore-comment = "ignore"

[tool.typos.default.extend-words]
# テストでtypoサジェスト動作を検証するため意図的に書く文字列はここへ追加する。
# テストデータ内の意図的なtypo
teh = "teh"
hte = "hte"
# `tests/config_test.py`内でtypoサジェスト動作を検証するため意図的に書かれているtypo文字列。
latset = "latset"

[tool.pytest.ini_options]
# https://docs.pytest.org/en/latest/reference/reference.html#ini-options-ref
# `tests/smoke_data/` 配下にはツール毎のサンプル `*_test.py` を含むためpytest collectionから除外する。
# スモークテスト本体は `tests/smoke_test.py` で、内部から pyfltr 経由で当該サンプルを呼び出す。
addopts = [
    "--showlocals",
    "-p", "no:cacheprovider",
    "--maxfail=5",
    "--durations=30",
    "--durations-min=0.5",
    "--timeout=60",
    "-n", "4",
    "--ignore=tests/smoke_data",
]
log_level = "DEBUG"
xfail_strict = true
asyncio_mode = "strict"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
markers = [
    "smoke: 対応ツール群を実起動して終了確認するスモークテスト。pnpm 11のような外部ツール側の既定変更検知が目的。",
]
